Eliminate unneccessary intermediate arrays